AUTOMAKE_OPTIONS=dist-zip
doc:
	doxygen puppy.doxygen
SUBDIRS = puppy examples
EXTRA_DIST = \
bootstrap \
puppy.doxygen \
Makefile.cvs \
config/config.guess \
config/config.sub \
config/depcomp \
config/install-sh \
config/ltmain.sh \
config/missing \
config/mkinstalldirs \
MSVCPP/parity/parity.vcproj \
MSVCPP/puppy/puppy.vcproj \
MSVCPP/symbreg/symbreg.vcproj \
MSVCPP/puppy.sln \
MSVCPP/puppy.suo \
puppy.kdevprj \
puppy.lsm 