dnl Process this file with autoconf to produce a configure script.
AC_INIT(puppy/src/Puppy.cpp)
AC_CONFIG_AUX_DIR(config)
AC_REVISION($Revision: 1.3 $)
AM_INIT_AUTOMAKE(puppy, 0.1)
AM_CONFIG_HEADER(config/config.hpp:config/config.hpp.in)
AC_PREFIX_DEFAULT(/usr/local)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

dnl Set language.
AC_LANG_CPLUSPLUS

dnl Checks for libraries.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_CXX_BOOL
AC_CXX_LONG_LONG
OB_CXX_HAVE_ISFINITE
AC_CXX_TEMPLATES
AC_CXX_TYPENAME
AC_CXX_TEMPLATE_SCOPED_ARGUMENT_MATCHING
AC_CXX_DEFAULT_TEMPLATE_PARAMETERS
AC_CXX_TEMPLATE_QUALIFIED_BASE_CLASS
AC_CXX_TEMPLATE_QUALIFIED_RETURN_TYPE
AC_CXX_CONST_CAST
AC_CXX_REINTERPRET_CAST
AC_CXX_STATIC_CAST
AC_CXX_DYNAMIC_CAST
AC_CXX_EXCEPTIONS
AC_CXX_EXPLICIT
AC_CXX_NAMESPACES
AC_CXX_RTTI
AC_CXX_HAVE_STD
AC_CXX_HAVE_STL
AC_CXX_HAVE_NUMERIC_LIMITS
AC_CXX_HAVE_SSTREAM
AC_CXX_HAVE_HASH_SET
AC_CXX_HAVE_HASH_MAP

dnl Stop configure process if some C++ essentials are not present.
dnl if test "$ac_cv_cxx_templates" = no; then
dnl   AC_MSG_ERROR([["sorry, templates support needed"]])
dnl fi
dnl if test "$ac_cv_cxx_template_scoped_argument_matching" = no; then
dnl   AC_MSG_ERROR([["sorry, template scoped argument matching support needed"]])
dnl fi
dnl if test "$ac_cv_cxx_default_template_parameters" = no; then
dnl   AC_MSG_ERROR([["sorry, default template parameters support needed"]])
dnl fi
dnl if test "$ac_cv_cxx_template_qualified_base_class" = no; then
dnl   AC_MSG_ERROR([["sorry, template qualified base class support needed"]])
dnl fi
dnl if test "$ac_cv_cxx_template_qualified_return_type" = no; then
dnl   AC_MSG_ERROR([["sorry, template qualified return type support needed"]])
dnl fi
dnl if test "$ac_cv_cxx_typename" = no; then
dnl   AC_MSG_ERROR([["sorry, typename qualifier needed"]])
dnl fi
dnl if test "$ac_cv_cxx_exceptions" = no; then
dnl   AC_MSG_ERROR([["sorry, support for exception handling needed"]])
dnl fi
dnl if test "$ac_cv_cxx_namespaces" = no; then
dnl   AC_MSG_ERROR([["sorry, namespaces support needed"]])
dnl fi
dnl if test "$ac_cv_cxx_have_std" = no; then
dnl   AC_MSG_ERROR([["sorry, namespace std needed"]])
dnl fi
dnl if test "$ac_cv_cxx_have_stl" = no; then
dnl   AC_MSG_ERROR([["sorry, no standard template library found"]])
dnl fi

dnl Create makefiles.
AC_OUTPUT(Makefile
          puppy/Makefile
          puppy/include/Makefile
          puppy/include/puppy/Makefile
          puppy/src/Makefile
          examples/Makefile
          examples/symbreg/Makefile
          examples/parity/Makefile)

